--- a/web/composer.json
+++ b/web/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "spatie/laravel-cors": "^1.6",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
